Remove a parent element z-index to enable tutorial highlighting - this will need testing to ensure it does not break elsewhere.

--- a/src/stylus/fablevision/bottom-hud.styl
+++ b/src/stylus/fablevision/bottom-hud.styl
@@ -1,5 +1,4 @@
 .fv-bottom-hud
-  z-index: 2
   position: absolute
   bottom: 0px
   .geniblocks.avatar-button
